tests/ui/parser/using_operator_function_missing.sol
using {as -} for uint; //~ ERROR: expected identifier
//~^ ERROR: expected one of
